src/avrora/core/isdl/ISDLParser.java
/* Generated By:JavaCC: Do not edit this line. ISDLParser.java */
package avrora.core.isdl;
import avrora.core.isdl.ast.*;
import java.util.List;
import java.util.LinkedList;

public class ISDLParser implements ISDLParserConstants {

/* Begin GRAMMAR */
  final public void Architecture() throws ParseException {
    jj_consume_token(ARCHITECTURE);
    jj_consume_token(IDENTIFIER);
    jj_consume_token(LBRACKET);
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INSTRUCTION:
      case FORMAT:
      case OPERAND:
      case REGISTER:
      case SUBROUTINE:
      case EXTERNAL:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      Item();
    }
    jj_consume_token(RBRACKET);
  }

  final public void Item() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INSTRUCTION:
      Instruction();
      break;
    case FORMAT:
      FormatDecl();
      break;
    case OPERAND:
      OperandDecl();
      break;
    case REGISTER:
      RegisterDecl();
      break;
    case SUBROUTINE:
    case EXTERNAL:
      Subroutine();
      break;
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void Instruction() throws ParseException {
    jj_consume_token(INSTRUCTION);
    jj_consume_token(STRING_LITERAL);
    Operands();
    jj_consume_token(LBRACKET);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ENCODING:
      case EXECUTE:
        ;
        break;
      default:
        jj_la1[2] = jj_gen;
        break label_2;
      }
      InstrItem();
    }
    jj_consume_token(RBRACKET);
    jj_consume_token(SEMI);
  }

  final public void InstrItem() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ENCODING:
      Encoding();
      break;
    case EXECUTE:
      Execute();
      break;
    default:
      jj_la1[3] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void Encoding() throws ParseException {
    jj_consume_token(ENCODING);
    jj_consume_token(EQUALS);
    Format();
    jj_consume_token(SEMI);
  }

  final public void Execute() throws ParseException {
                   List l = new LinkedList();
    jj_consume_token(EXECUTE);
    jj_consume_token(EQUALS);
    Block(l);
    jj_consume_token(SEMI);
  }

  final public void FormatDecl() throws ParseException {
    jj_consume_token(FORMAT);
    jj_consume_token(IDENTIFIER);
    jj_consume_token(EQUALS);
    Format();
    jj_consume_token(SEMI);
  }

  final public void OperandDecl() throws ParseException {
    jj_consume_token(OPERAND);
    jj_consume_token(IDENTIFIER);
    jj_consume_token(67);
    Kind();
    jj_consume_token(EQUALS);
    OperandSet();
    jj_consume_token(SEMI);
  }

  final public void Kind() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case REGISTER:
      jj_consume_token(REGISTER);
      break;
    case IMMEDIATE:
      jj_consume_token(IMMEDIATE);
      break;
    case ADDRESS:
      jj_consume_token(ADDRESS);
      break;
    default:
      jj_la1[4] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void OperandSet() throws ParseException {
    jj_consume_token(LBRACKET);
    jj_consume_token(IDENTIFIER);
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[5] = jj_gen;
        break label_3;
      }
      jj_consume_token(COMMA);
      jj_consume_token(IDENTIFIER);
    }
    jj_consume_token(RBRACKET);
  }

  final public void RegisterDecl() throws ParseException {
    jj_consume_token(REGISTER);
    jj_consume_token(IDENTIFIER);
    jj_consume_token(EQUALS);
    jj_consume_token(INTEGER_LITERAL);
    jj_consume_token(SEMI);
  }

  final public void Format() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENTIFIER:
      DerivedFormat();
      break;
    case LBRACKET:
      NewFormat();
      break;
    default:
      jj_la1[6] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void DerivedFormat() throws ParseException {
    jj_consume_token(IDENTIFIER);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case WHERE:
      jj_consume_token(WHERE);
      SubstitutionList();
      break;
    default:
      jj_la1[7] = jj_gen;
      ;
    }
  }

  final public void NewFormat() throws ParseException {
    jj_consume_token(LBRACKET);
    ExprList();
    jj_consume_token(RBRACKET);
  }

  final public void SubstitutionList() throws ParseException {
    jj_consume_token(LBRACKET);
    Substitution();
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[8] = jj_gen;
        break label_4;
      }
      jj_consume_token(COMMA);
      Substitution();
    }
    jj_consume_token(RBRACKET);
  }

  final public void Substitution() throws ParseException {
    jj_consume_token(IDENTIFIER);
    jj_consume_token(EQUALS);
    Expr();
  }

  final public void Operands() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENTIFIER:
      Operand();
      label_5:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          ;
          break;
        default:
          jj_la1[9] = jj_gen;
          break label_5;
        }
        jj_consume_token(COMMA);
        Operand();
      }
      break;
    default:
      jj_la1[10] = jj_gen;
      ;
    }
  }

  final public void Operand() throws ParseException {
    jj_consume_token(IDENTIFIER);
    jj_consume_token(67);
    jj_consume_token(IDENTIFIER);
  }

  final public void Subroutine() throws ParseException {
                      List l = new LinkedList();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SUBROUTINE:
      jj_consume_token(SUBROUTINE);
      jj_consume_token(IDENTIFIER);
      jj_consume_token(LPAREN);
      Operands();
      jj_consume_token(RPAREN);
      jj_consume_token(67);
      jj_consume_token(IDENTIFIER);
      Block(l);
      jj_consume_token(SEMI);
      break;
    case EXTERNAL:
      jj_consume_token(EXTERNAL);
      jj_consume_token(IDENTIFIER);
      jj_consume_token(LPAREN);
      Operands();
      jj_consume_token(RPAREN);
      jj_consume_token(67);
      jj_consume_token(IDENTIFIER);
      jj_consume_token(SEMI);
      break;
    default:
      jj_la1[11] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public Expr Expr() throws ParseException {
                Expr e;
    e = Cond_Or_Expr();
                         {if (true) return e;}
    throw new Error("Missing return statement in function");
  }

  final public List ExprList() throws ParseException {
                    List l = new LinkedList(); Expr e;
    e = Expr();
                  l.add(e);
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[12] = jj_gen;
        break label_6;
      }
      jj_consume_token(COMMA);
      Expr();
                                            l.add(e);
    }
      {if (true) return l;}
    throw new Error("Missing return statement in function");
  }

  final public Expr Term() throws ParseException {
                Expr e;
    if (jj_2_1(2)) {
      e = CallExpr();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
        e = VarUse();
        break;
      case INTEGER_LITERAL:
      case BOOLEAN_LITERAL:
        e = Literal();
        break;
      case DOLLAR:
        e = MapAccess();
        break;
      case LPAREN:
        jj_consume_token(LPAREN);
        e = Expr();
        jj_consume_token(RPAREN);
        break;
      default:
        jj_la1[13] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 68:
      e = BitRange(e);
      break;
    default:
      jj_la1[14] = jj_gen;
      ;
    }
      {if (true) return e;}
    throw new Error("Missing return statement in function");
  }

  final public Expr MapAccess() throws ParseException {
                     Expr e; Token t;
    jj_consume_token(DOLLAR);
    t = jj_consume_token(IDENTIFIER);
    jj_consume_token(LPAREN);
    e = Expr();
    jj_consume_token(RPAREN);
                                            {if (true) return new MapExpr(t, e);}
    throw new Error("Missing return statement in function");
  }

  final public Expr VarUse() throws ParseException {
                  Token t;
    t = jj_consume_token(IDENTIFIER);
                     {if (true) return new VarExpr(t);}
    throw new Error("Missing return statement in function");
  }

  final public Expr Literal() throws ParseException {
                   Token t;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INTEGER_LITERAL:
      t = jj_consume_token(INTEGER_LITERAL);
                           {if (true) return new Literal.IntExpr(t);}
      break;
    case BOOLEAN_LITERAL:
      t = jj_consume_token(BOOLEAN_LITERAL);
                           {if (true) return new Literal.BoolExpr(t);}
      break;
    default:
      jj_la1[15] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Expr CallExpr() throws ParseException {
                    Token t; List l;
    t = jj_consume_token(IDENTIFIER);
    l = Parameters();
                                      {if (true) return new CallExpr(t, l);}
    throw new Error("Missing return statement in function");
  }

  final public List Parameters() throws ParseException {
                      List l = new LinkedList();
    jj_consume_token(LPAREN);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INTEGER_LITERAL:
    case BOOLEAN_LITERAL:
    case LPAREN:
    case SUB:
    case NOT:
    case B_COMP:
    case DOLLAR:
    case IDENTIFIER:
      l = ExprList();
      break;
    default:
      jj_la1[16] = jj_gen;
      ;
    }
    jj_consume_token(RPAREN);
      {if (true) return l;}
    throw new Error("Missing return statement in function");
  }

  final public Stmt Statement() throws ParseException {
                     Stmt s;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LOCAL:
      s = LocalDecl();
      break;
    case IF:
      s = IfStatement();
      break;
    default:
      jj_la1[17] = jj_gen;
      if (jj_2_2(2)) {
        s = Assignment();
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IDENTIFIER:
          s = CallStmt();
          break;
        default:
          jj_la1[18] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
      {if (true) return s;}
    throw new Error("Missing return statement in function");
  }

  final public DeclStmt LocalDecl() throws ParseException {
                         Token n, t; Expr e;
    jj_consume_token(LOCAL);
    n = jj_consume_token(IDENTIFIER);
    jj_consume_token(67);
    t = jj_consume_token(IDENTIFIER);
    jj_consume_token(EQUALS);
    e = Expr();
    jj_consume_token(SEMI);
      {if (true) return new DeclStmt(n, t, e);}
    throw new Error("Missing return statement in function");
  }

  final public IfStmt IfStatement() throws ParseException {
                         Expr c; List t = new LinkedList(), f = new LinkedList();
    jj_consume_token(IF);
    jj_consume_token(LPAREN);
    c = Expr();
    jj_consume_token(RPAREN);
    SingleStatement(t);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ELSE:
      jj_consume_token(ELSE);
      SingleStatement(f);
      break;
    default:
      jj_la1[19] = jj_gen;
      ;
    }
      {if (true) return new IfStmt(c, t, f);}
    throw new Error("Missing return statement in function");
  }

  final public void SingleStatement(List l) throws ParseException {
                                 Stmt s;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LOCAL:
    case IF:
    case DOLLAR:
    case IDENTIFIER:
      s = Statement();
                      l.add(s);
      break;
    case LBRACKET:
      Block(l);
      break;
    default:
      jj_la1[20] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public AssignStmt Assignment() throws ParseException {
                            AssignStmt s;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENTIFIER:
      s = VarAssignment();
      break;
    case DOLLAR:
      s = MapAssignment();
      break;
    default:
      jj_la1[21] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(SEMI);
      {if (true) return s;}
    throw new Error("Missing return statement in function");
  }

  final public CallStmt CallStmt() throws ParseException {
                        Token m; List l;
    m = jj_consume_token(IDENTIFIER);
    l = Parameters();
    jj_consume_token(SEMI);
                                            {if (true) return new CallStmt(m, l);}
    throw new Error("Missing return statement in function");
  }

  final public AssignStmt VarAssignment() throws ParseException {
                               AssignStmt s; Token v, i, j; Expr e;
    v = jj_consume_token(IDENTIFIER);
    s = VarAssignEnd(v);
      {if (true) return s;}
    throw new Error("Missing return statement in function");
  }

  final public AssignStmt VarAssignEnd(Token v) throws ParseException {
                                     AssignStmt s; Token i, j; Expr e, b;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case EQUALS:
      jj_consume_token(EQUALS);
      e = Expr();
                       s = new VarAssignStmt(v, e);
      break;
    default:
      jj_la1[22] = jj_gen;
      if (jj_2_3(3)) {
        jj_consume_token(68);
        i = jj_consume_token(INTEGER_LITERAL);
        jj_consume_token(67);
        j = jj_consume_token(INTEGER_LITERAL);
        jj_consume_token(69);
        jj_consume_token(EQUALS);
        e = Expr();
                       s = new VarBitRangeAssignStmt(v, i, j, e);
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 68:
          jj_consume_token(68);
          b = Expr();
          jj_consume_token(69);
          jj_consume_token(EQUALS);
          e = Expr();
                       s = new VarBitAssignStmt(v, b, e);
          break;
        default:
          jj_la1[23] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
        {if (true) return s;}
    throw new Error("Missing return statement in function");
  }
